upgrade to Rails 4.1

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -67,3 +67,13 @@ div {
     list-style: square;
   }
 }
+
+.comment {
+  margin-left: 30px;
+}
+.post {
+  margin-left: 20px;
+}
+.reply {
+  margin-left: 30px;
+}
