--- a/app/views/replies/_form.html.erb
+++ b/app/views/replies/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_area :body %>
   </div>
   <div class="field">
-    <%= f.label :Comment %><br />
-    <%= f.text_field :Comment %>
+    <%= f.label :comment %><br />
+    <%= f.text_field :comment %>
   </div>
   <div class="actions">
     <%= f.submit %>
