add russian-doll and page caching

--- a/app/views/replies/_reply.html.erb
+++ b/app/views/replies/_reply.html.erb
@@ -1,2 +1,4 @@
-<h4>Reply <%= reply.id %>:</h4>
-<p><%= reply.body %></p>
+<% cache reply do %>
+  <h4>Reply <%= reply.id %>:</h4>
+  <p><%= reply.body %></p>
+<% end %>
