remove inner caching to save memcachier memory

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<% cache comment do %>
+<%# cache comment do %>
   <div class="comment">
     <h3>Comment <%= comment.id %>:</h3>
     <p><%= comment.body %></p>
@@ -6,4 +6,4 @@
       <%= render comment.replies %>
     </div>
   </div>
-<% end %>
+<%# end %>
