--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -9,17 +9,17 @@
     <th></th>
   </tr>
 
-<% @comments.each do |comment| %>
+<% @post.comments.each do |comment| %>
   <tr>
     <td><%= comment.body %></td>
     <td><%= comment.post %></td>
-    <td><%= link_to 'Show', comment %></td>
-    <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-    <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Show', [@post, comment] %></td>
+    <td><%= link_to 'Edit', edit_post_comment_path(@post, comment) %></td>
+    <td><%= link_to 'Destroy', [@post, comment], method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Comment', new_comment_path %>
+<%= link_to 'New Comment', new_post_comment_path(@post) %>
