--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,32 @@
 <h1>Ivan the Terrible's Blog</h1>
 
-<section class="blog">
-  <%= render @posts %>
-</section>
+<%# paginate @posts %>
 
+
+  <section class="blog">
+    <%= @posts.each do |post| %>
+      <% cache post do %>
+        <section class="post">
+          <h2>Post <%= "#{post.id}: #{post.title}" %></h2>
+          <div class="post"><%= post.body %></div>
+          <%# link_to 'Load Comments', post_comments_path(post), remote: true %>
+          <%#<div id="<%= dom_id(post) _comments"></div> %>
+          <div class="comment">
+            <%= post.comments.each do |comment| %>
+              <h3>Comment <%= comment.id %>:</h3>
+              <p><%= comment.body %></p>
+              <div class="reply">
+                <%= comment.replies.each do |reply| %>
+                  <h4>Reply <%= reply.id %>:</h4>
+                  <p><%= reply.body %></p>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
+        </section>
+      <% end %>
+    <% end %>
+  </section>
 <br />
 
-<%= link_to 'New Post', new_post_path %>
+<%# paginate @posts %>
